fixed spacing issue in nav

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,6 +3,12 @@
   width: 100%;
   height: 480px;
   left: 0px;
-  top: 80px;
-  object-fit: contain;
+  object-fit: scale-down;
+  align-items: center;
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+  justify-content: center;
+  display: flex;
+  color: white;
 }
