--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,11 +1,3 @@
-.navbar {
-  height: 60px;
-  margin-top: 12px;
-  margin-bottom: 12px;
-  padding: 4px 20px;
-  display: flex;
-}
-
 .navbar-container {
   width: auto;
   height: 60px;
@@ -17,18 +9,30 @@
   margin-right: auto;
   padding: 4px 20px;
   display: flex;
+  background-color: $dark-blue;
+}
+
+.ul {
+  margin-bottom: 0rem;
+}
+.navbar {
+  display: flex;
 }
 
 .nav-links {
   list-style-type: none;
   text-decoration: none;
   display: inline-block;
-  color: black;
+  color: white;
+  font-family: Plus Jakarta Sans, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+
 }
 
 .nav-links li {
   display: inline-block;
-  padding: 0px 20px;
+  padding: 10px 20px;
   align-items: center;
 }
 
