--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -22,3 +22,7 @@
 .main-page {
   color: white
 }
+
+ul {
+  margin-bottom: 0rem;
+}
